--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
       <div ui-view></div>
     <script src="node_modules/angular/angular.min.js"></script>
     <script src="node_modules/angular-ui-router/release/angular-ui-router.min.js"></script>
+    <script src="node_modules/angular-bootstrap/ui-bootstrap.js"></script>
+    <script src="node_modules/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="app/app.js"></script>
+    <script src="app/states/payment-interface/payment-interface.js"></script>
+    <script src="app/states/shopping-cart/shopping-cart.js"></script>
   </body>
 </html>
