--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="app/app.js"></script>
     <script src="app/states/shopping-cart/shopping-cart.js"></script>
     <script src="app/states/payment-interface/payment-interface.js"></script>
-   
+    <script src="app/directives/payment-interface/payment-interface.js"></script>
+    <script src="app/directives/shopping-cart/shopping-cart.js"></script> -->
   </body>
 </html>
